cmake_minimum_required(VERSION 3.16)
project(fearservmod)
if(CMAKE_SIZEOF_VOID_P EQUAL 8)
    if(MSVC)
        set(crt_lib ${CMAKE_SOURCE_DIR}/thirdparty/msvcrt/x64/msvcrt.lib)
        set(crt_lib_obj ${CMAKE_SOURCE_DIR}/thirdparty/msvcrt/x64/msvcrt_win2003.obj)
    elseif(CMAKE_COMPILER_IS_GNUCXX)
    endif()
elseif(CMAKE_SIZEOF_VOID_P EQUAL 4)
    if(MSVC)
        set(crt_lib ${CMAKE_SOURCE_DIR}/thirdparty/msvcrt/x86/msvcrt.lib)
        set(crt_lib_obj ${CMAKE_SOURCE_DIR}/thirdparty/msvcrt/x86/msvcrt_winxp.obj)
    elseif(CMAKE_COMPILER_IS_GNUCXX)
    endif()
endif()
option(OPTIMIZE_GLOBAL "Shiny optimizations" OFF)
if(OPTIMIZE_GLOBAL)
    if(MSVC)
        set(optimization_compiler_flags "/GL /Gw")
        set(optimization_linker_flags "/LTCG /OPT:ICF /OPT:REF")
    elseif(CMAKE_COMPILER_IS_GNUCXX)
        set(optimization_compiler_flags "-flto")
        set(optimization_linker_flags ",-flto")
    endif()
else()
    set(optimization_compiler_flags "")
    set(optimization_linker_flags "")
endif()
if(MSVC)
set(crt_type "/MD")
if(CMAKE_BUILD_TYPE STREQUAL "Debug")
set(crt_type "/MDd")
endif()
endif()
add_subdirectory(source)
#include_directories(sharedcode)
add_subdirectory(sharedcode)